[gd_scene load_steps=63 format=3 uid="uid://b7oauumwgh4tk"]

[ext_resource type="Script" path="res://scripts/shadow.gd" id="1_cck50"]
[ext_resource type="Texture2D" uid="uid://c75pe5amgok08" path="res://sprites/Shinobi/Attack_1.png" id="2_ioh4i"]
[ext_resource type="Texture2D" uid="uid://yydpoe0kbclk" path="res://sprites/Shinobi/Idle.png" id="2_x2egb"]
[ext_resource type="Texture2D" uid="uid://brquyrd451430" path="res://sprites/Shinobi/Attack_2.png" id="3_o2gdj"]
[ext_resource type="Texture2D" uid="uid://dv1d72gk08ci0" path="res://sprites/Shinobi/Jump.png" id="3_snxxa"]
[ext_resource type="Texture2D" uid="uid://dqgdmkt24upqj" path="res://sprites/Shinobi/Run.png" id="3_vaty6"]
[ext_resource type="Texture2D" uid="uid://6kmtw0x53wsv" path="res://sprites/Shinobi/Attack_3.png" id="4_scjpv"]
[ext_resource type="Texture2D" uid="uid://bx6cjjdc25tma" path="res://sprites/Shinobi/Shield.png" id="8_tarlc"]
[ext_resource type="Texture2D" uid="uid://c1tndtt75hrsu" path="res://sprites/Shinobi/Walk.png" id="9_u0dw2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d0ops"]
atlas = ExtResource("2_ioh4i")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1mmp"]
atlas = ExtResource("2_ioh4i")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv0te"]
atlas = ExtResource("2_ioh4i")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmye8"]
atlas = ExtResource("2_ioh4i")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbwy6"]
atlas = ExtResource("2_ioh4i")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_affol"]
atlas = ExtResource("3_o2gdj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5ftb"]
atlas = ExtResource("3_o2gdj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7vgc"]
atlas = ExtResource("3_o2gdj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_86sso"]
atlas = ExtResource("4_scjpv")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w874v"]
atlas = ExtResource("4_scjpv")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5vv7"]
atlas = ExtResource("4_scjpv")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1nak"]
atlas = ExtResource("4_scjpv")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgsfh"]
atlas = ExtResource("2_x2egb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4una"]
atlas = ExtResource("2_x2egb")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ao07"]
atlas = ExtResource("2_x2egb")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh41g"]
atlas = ExtResource("2_x2egb")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2rec"]
atlas = ExtResource("2_x2egb")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq8jj"]
atlas = ExtResource("2_x2egb")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g4pj"]
atlas = ExtResource("3_snxxa")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_na1tg"]
atlas = ExtResource("3_snxxa")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_61sbu"]
atlas = ExtResource("3_snxxa")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_phiwj"]
atlas = ExtResource("3_snxxa")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_275ax"]
atlas = ExtResource("3_snxxa")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_asr82"]
atlas = ExtResource("3_snxxa")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7ma6"]
atlas = ExtResource("3_snxxa")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iyht"]
atlas = ExtResource("3_snxxa")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_umjox"]
atlas = ExtResource("3_snxxa")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp5ty"]
atlas = ExtResource("3_snxxa")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7vo8"]
atlas = ExtResource("3_snxxa")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r80uw"]
atlas = ExtResource("3_snxxa")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx674"]
atlas = ExtResource("3_vaty6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fmn6"]
atlas = ExtResource("3_vaty6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iqfv"]
atlas = ExtResource("3_vaty6")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vl67"]
atlas = ExtResource("3_vaty6")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrukc"]
atlas = ExtResource("3_vaty6")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqi3x"]
atlas = ExtResource("3_vaty6")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfrl2"]
atlas = ExtResource("3_vaty6")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_110hr"]
atlas = ExtResource("3_vaty6")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_onnl5"]
atlas = ExtResource("8_tarlc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ctbi"]
atlas = ExtResource("8_tarlc")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro4de"]
atlas = ExtResource("8_tarlc")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_co8x7"]
atlas = ExtResource("8_tarlc")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n13fx"]
atlas = ExtResource("9_u0dw2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjxna"]
atlas = ExtResource("9_u0dw2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xg5r"]
atlas = ExtResource("9_u0dw2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_048a5"]
atlas = ExtResource("9_u0dw2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogsjo"]
atlas = ExtResource("9_u0dw2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0g33"]
atlas = ExtResource("9_u0dw2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2un8d"]
atlas = ExtResource("9_u0dw2")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwur2"]
atlas = ExtResource("9_u0dw2")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_8uhad"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0ops")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1mmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv0te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmye8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbwy6")
}],
"loop": false,
"name": &"attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_affol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5ftb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7vgc")
}],
"loop": false,
"name": &"attack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86sso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w874v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5vv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1nak")
}],
"loop": false,
"name": &"attack3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgsfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4una")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ao07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh41g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2rec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq8jj")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g4pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61sbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phiwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_275ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asr82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7ma6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iyht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umjox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp5ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7vo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r80uw")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx674")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fmn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iqfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vl67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrukc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqi3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfrl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_110hr")
}],
"loop": true,
"name": &"run",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onnl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ctbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro4de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co8x7")
}],
"loop": true,
"name": &"shield",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n13fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjxna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xg5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_048a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogsjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0g33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2un8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwur2")
}],
"loop": true,
"name": &"walk",
"speed": 14.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0gjj2"]
radius = 6.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ymw0o"]
height = 38.0

[node name="shinobi" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_cck50")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.451174, 0.451174)
sprite_frames = SubResource("SpriteFrames_8uhad")
animation = &"attack1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 12)
shape = SubResource("CapsuleShape2D_0gjj2")

[node name="AttackArea2D" type="Area2D" parent="."]
modulate = Color(0.758907, 0.0688015, 0.768793, 1)
visibility_layer = 65
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
visible = false
position = Vector2(0, 12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ymw0o")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(40, -60)
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
